syntax = "proto3";

import "google/protobuf/empty.proto";

package ipman;

option go_package = "github.com/bear-san/ipman/pkg/grpc";

service IPAddressService {
  rpc AssignAddress(AssignAddressRequest) returns (AssignAddressResponse);
  rpc ReleaseAddress(ReleaseAddressRequest) returns (google.protobuf.Empty);
  rpc ListAddresses(google.protobuf.Empty) returns (ListAddressesResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
}

enum AddressType {
  UNKNOWN = 0;
  LOCAL = 1;
  GLOBAL = 2;
}

message IPAddress {
  string address = 1;
  string gatewayAddress = 3;
  AddressType addressType = 4;
  bool using = 5;
  bool autoAssignEnabled = 6;
  string description = 7;

  reserved 2;
}

message ListAddressesResponse {
  repeated IPAddress addresses = 1;
}

message AssignAddressRequest {
  AddressType addressType = 1;
  string description = 2;
}

message UpdateAddressRequest {
  IPAddress address = 1;
}

message UpdateAddressResponse {
  IPAddress address = 1;
}

message ReleaseAddressRequest {
  IPAddress address = 1;
}

message AssignAddressResponse {
  IPAddress address = 1;
}
